# tpm2-openssl

./: .cirrus.yml  .gitignore  .lgtm.yml  INSTALL.md  LICENSE  Makefile.am  README.md  bootstrap  configure.ac  dependencies.props  tpm2-openssl.sln  tpm2-openssl.vcxproj
.github/workflows/: build-check.yml  clang-asan-check.yml  codeql.yml  coverity-scan.yml  gcc-codecov-distcheck.yml  gcc-distcheck.yml
doc/: CHANGELOG.md  INSTALL.md  RELEASE.md  asymmetric.md  certificates.md  initialization.md  keys.md  symmetric.md
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  MAINTAINERS.md  RELEASE.md  SECURITY.md  asymmetric.md  certificates.md  initialization.md  keys.md  rng.md  symmetric.md
src/: tpm2-provider-algorithms.c  tpm2-provider-algorithms.h  tpm2-provider-asymcipher-rsa.c  tpm2-provider-capabilities.c  tpm2-provider-cipher.c  tpm2-provider-core.c  tpm2-provider-ctx.c  tpm2-provider-ctx.h  tpm2-provider-decoder-ctx.c  tpm2-provider-decoder-ctx2key.c  tpm2-provider-decoder-der.c  tpm2-provider-decoder-pem.c  tpm2-provider-decoder-raw.c  tpm2-provider-decoder-tss2.c  tpm2-provider-decoder-tss2key.c  tpm2-provider-digest.c  tpm2-provider-digest.h  tpm2-provider-encoder.c  tpm2-provider-keyexch.c  tpm2-provider-keymgmt-ec.c  tpm2-provider-keymgmt-rsa.c  tpm2-provider-pkey.c  tpm2-provider-pkey.h  tpm2-provider-rand.c  tpm2-provider-rsa-asymcipher.c  tpm2-provider-rsa-decoder.c  tpm2-provider-rsa-encoder.c  tpm2-provider-rsa-keymgmt.c  tpm2-provider-rsa-signature.c  tpm2-provider-semaphore.c  tpm2-provider-semaphore.h  tpm2-provider-signature.c  tpm2-provider-store-file.c  tpm2-provider-store-handle.c  tpm2-provider-store-object.c  tpm2-provider-store-tss2.c  tpm2-provider-types.c  tpm2-provider-types.h  tpm2-provider-x509.c  tpm2-provider-x509.h  (+2 more)
test/: check_hash_support.sh  cipher_aes128.sh  cipher_aes128_cbc.sh  cipher_aes128_ecb.sh  cipher_aes256.sh  cipher_aes256_nopad.sh  cipher_camellia128.sh  digest.sh  ec_createak_x509_cert.sh  ec_createak_x509_cms.sh  ec_createak_x509_csr.sh  ec_createak_x509_csr_auth.sh  ec_createak_x509_index.sh  ec_export_import_private_key.sh  ec_genpkey_check.sh  ec_genpkey_check_handle.sh  ec_genpkey_parameters.sh  ec_genpkey_store_load.c  ec_genpkey_tls_server.sh  ec_genpkey_x509_cms.sh  ec_genpkey_x509_csr.c  ecdh_create_keyexch_index.sh  ecdh_genpkey_keyexch.sh  ecdsa_createak_sign_handle.sh  ecdsa_genpkey_auth.sh  ecdsa_genpkey_sign_auth.sh  ecdsa_genpkey_sign_rawin.sh  ecdsa_import_null_sign.sh  list.sh  rand.sh  rand_processes.c  rand_threads.c  rsa_create_decrypt.sh  rsa_create_decrypt_oaep.sh  rsa_create_decrypt_pkcs1.sh  rsa_createak_auth.sh  rsa_createak_sign.sh  rsa_createak_sign_handle.sh  rsa_createak_sign_object.sh  rsa_createak_tls_server.sh  (+28 more)
test/Containerfiles/: Containerfile.fedora-38  Containerfile.fedora-41  Containerfile.fedora-rawhide  Containerfile.ubuntu-2204  Containerfile.ubuntu-2404
test/ec_pki/: ec_pki.sh  openssl.cnf
test/rsa_pki/: rsa_pki.sh
test/rsa_pki/etc/: email.conf  root-ca.conf  server.conf  signing-ca.conf
